--- a/facebook/package.json
+++ b/facebook/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "firebase": "^9.9.2",
     "next": "latest",
     "next-auth": "^4.10.3",
     "react": "18.1.0",
